# Chess-Challenge

./: .gitignore
Chess-Challenge/src/My Bot/: MyBot.cs
references/: Caissabase - Free Huge Chess Game Database - MattPlaysChess.url  Scid vs. PC.url  Train Your Own Chess AI - Colaboratory.url  chess.stackexchange question.url
training/: TODO.md  convert.ipynb  dataset-new.ipynb  requirements.ipynb  test.rest  train-new.ipynb  train.ipynb
training/conversion-rs/: Cargo.toml
training/conversion-rs/examples/: sqlitefail.rs
training/conversion-rs/src/: main.rs
training/lightning_logs/chess/1690566643-batch_size-10240/: events.out.tfevents.1690566710.Teamy-Desktop.10028.0
training/lightning_logs/chess/1690567265-batch_size-10240/: events.out.tfevents.1690567274.Teamy-Desktop.10028.1
training/lightning_logs/chess/1690567320-batch_size-10240/: events.out.tfevents.1690567321.Teamy-Desktop.10028.2
training/lightning_logs/chess/1690567352-batch_size-10240/: events.out.tfevents.1690567352.Teamy-Desktop.10028.3
training/lightning_logs/chess/1690567352-batch_size-10240/checkpoints/: epoch=0-step=3630.ckpt
training/models/: model1-noturn-1690155046.pt  model2-withturn-1690159539.pt  model2-withturn-1690160543.pt  model2-withturn-1690436853.pt  model2-withturn-1690439187.pt  model3-normevalbetterloader-1690576002.pt
training/unused/: dataset.ipynb  query-speed.ipynb
